feature: Testemunho de Cliente + Contato + Footer

--- a/public/css/myCss.css
+++ b/public/css/myCss.css
@@ -80,3 +80,9 @@ h6:hover{
 .my-note{
     text-align: center !important;
 }
+.myzi1{
+    z-index: 1;
+}
+.my-row{
+    justify-content: center;
+}
