--- a/public/css/myCss.css
+++ b/public/css/myCss.css
@@ -58,6 +58,18 @@ h6:hover{
     margin-bottom: 0px!important;
     z-index: 1;
 }
+
+.my-icon-about{
+    position: relative;
+    float: right;
+    left: 20px;
+    font-size: 80%!important;
+    width:  20px!important;
+    height: 20px!important;
+    margin-bottom: 0px!important;
+    z-index: 1;
+}
+.my-icon-about>i,
 .my-icon>i{
     position: absolute;
     right: 5px;
